How to get a release candidate tarball in /tmp:

  ver=2.1.4
  cd /tmp
  svn export svn://repo.hu/pcb-rnd/trunk pcb-rnd-$ver
  tar -cf pcb-rnd-$ver.tar pcb-rnd-$ver

Packaging changes between 2.1.4 and 2.2.0
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
TODO:
	- export_gcode doesn't depend on libgd

A. changes that probably don't need action

B. changes that probably DO need action


Packaging changes between 2.1.3 and 2.1.4
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

A. changes that probably don't need action

1. removed plugin lib_gtk_hid from pcb-rnd-hid-gtk

2. removed some non-packaged code that depended on cairo; at the moment
   pcb-rnd has no direct cairo dependency; if cairo creeped in as direct
   explicit dependency on any package, please remove it. (gtk2 may bring
   it in as indirect dependency)

B. changes that probably DO need action

1. copyright update: new minilib in src_3rd: libulzw (new author, BSD license)
   (In case you need to maintain a copyright file)

2. new plugins: import_pxm_gd import_pxm_pnm in package pcb-rnd-import-geo
   Note: import_pxm_gd depends on libgd so pcb-rnd-import-geo
   started to depend on libgd

3. utility fp2anim got removed and replaced by the new utility fp2preview;
   this affects the manual page file name too.

Packaging changes between 2.1.2 and 2.1.3
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
A. changes that probably don't need action

1. removed old menu files pcb-menu-lesstif.lht and pcb-menu-gtk.lht from
   the installation (used to install in $PREFIX/share/pcb-rnd)

2. new plugin in package pcb-rnd-export: export_excellon (split
   off from export_gerber)

3. new plugin in package pcb-rnd-lib-gui: lib_hid_pcbui (for the hidlib split)

4. new plugin in package pcb-rnd-core: act_read (new actions for accessing
   board data)

5. new plugin in package pcb-rnd-cloud: lib_wget (split off from fp_wget
   to be reused in the board ordering plugins later)


B. changes that probably DO need action
